--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
             align-items: center;
         }
 
+        .swiper-slide a {
+            text-decoration: none;
+            width: 100%;
+        }
+
         .swiper-button-next, .swiper-button-prev {
             background: var(--card-bg);
             width: 70px !important;
@@ -880,46 +885,58 @@
         <div class="swiper popularSwiper mb-5">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-fonts"></i></div>
-                        <h4>Text Tools</h4>
-                        <p>Grammar, counter, formatter</p>
-                    </div>
+                    <a href="tools/text-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-fonts"></i></div>
+                            <h4>Text Tools</h4>
+                            <p>Grammar, counter, formatter</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-calculator"></i></div>
-                        <h4>Calculators</h4>
-                        <p>Finance, age, scientific</p>
-                    </div>
+                    <a href="tools/calculator.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-calculator"></i></div>
+                            <h4>Calculators</h4>
+                            <p>Finance, age, scientific</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-image"></i></div>
-                        <h4>Image Tools</h4>
-                        <p>Resize, compress, convert</p>
-                    </div>
+                    <a href="tools/image-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-image"></i></div>
+                            <h4>Image Tools</h4>
+                            <p>Resize, compress, convert</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-file-earmark-pdf"></i></div>
-                        <h4>PDF Tools</h4>
-                        <p>Merge, split, compress</p>
-                    </div>
+                    <a href="tools/pdf-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-file-earmark-pdf"></i></div>
+                            <h4>PDF Tools</h4>
+                            <p>Merge, split, compress</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-code-slash"></i></div>
-                        <h4>Developer Tools</h4>
-                        <p>JSON, minifier, formatter</p>
-                    </div>
+                    <a href="tools/developer-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-code-slash"></i></div>
+                            <h4>Developer Tools</h4>
+                            <p>JSON, minifier, formatter</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-cpu"></i></div>
-                        <h4>AI Tools</h4>
-                        <p>Writer, generator, assistant</p>
-                    </div>
+                    <a href="tools/ai-utilities.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-cpu"></i></div>
+                            <h4>AI Tools</h4>
+                            <p>Writer, generator, assistant</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="swiper-button-next"></div>
@@ -936,48 +953,60 @@
         <div class="swiper newToolsSwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <span class="tool-badge">NEW</span>
-                        <div class="tool-icon"><i class="bi bi-robot"></i></div>
-                        <h4>AI Assistant</h4>
-                        <p>Chat, write, generate content</p>
-                    </div>
+                    <a href="tools/ai-utilities.html">
+                        <div class="tool-card">
+                            <span class="tool-badge">NEW</span>
+                            <div class="tool-icon"><i class="bi bi-robot"></i></div>
+                            <h4>AI Assistant</h4>
+                            <p>Chat, write, generate content</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <span class="tool-badge">UPDATED</span>
-                        <div class="tool-icon"><i class="bi bi-shield-lock"></i></div>
-                        <h4>Security Tools</h4>
-                        <p>Password, hash, encryption</p>
-                    </div>
+                    <a href="tools/security-tools.html">
+                        <div class="tool-card">
+                            <span class="tool-badge">UPDATED</span>
+                            <div class="tool-icon"><i class="bi bi-shield-lock"></i></div>
+                            <h4>Security Tools</h4>
+                            <p>Password, hash, encryption</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-bar-chart"></i></div>
-                        <h4>Data Tools</h4>
-                        <p>Visualization, analysis, CSV</p>
-                    </div>
+                    <a href="tools/data-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-bar-chart"></i></div>
+                            <h4>Data Tools</h4>
+                            <p>Visualization, analysis, CSV</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-globe"></i></div>
-                        <h4>Network Tools</h4>
-                        <p>IP lookup, speed test, ping</p>
-                    </div>
+                    <a href="tools/network-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-globe"></i></div>
+                            <h4>Network Tools</h4>
+                            <p>IP lookup, speed test, ping</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-pencil-square"></i></div>
-                        <h4>Online Editors</h4>
-                        <p>Text, code, markdown editor</p>
-                    </div>
+                    <a href="tools/online-editors.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-pencil-square"></i></div>
+                            <h4>Online Editors</h4>
+                            <p>Text, code, markdown editor</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="swiper-slide">
-                    <div class="tool-card">
-                        <div class="tool-icon"><i class="bi bi-hash"></i></div>
-                        <h4>SEO Tools</h4>
-                        <p>Keywords, analyzer, generator</p>
-                    </div>
+                    <a href="tools/seo-tools.html">
+                        <div class="tool-card">
+                            <div class="tool-icon"><i class="bi bi-hash"></i></div>
+                            <h4>SEO Tools</h4>
+                            <p>Keywords, analyzer, generator</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="swiper-button-next"></div>
