--- a/tools/image-tools.html
+++ b/tools/image-tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PixelForge · Professional Image Editor</title>
+    <title>Professional Image Editor</title>
     <meta name="description" content="Complete image editing suite - crop, filter, adjust, draw, and more — fully working">
     <!-- Bootstrap + icons + font -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
