--- a/tools/resume-tools.html
+++ b/tools/resume-tools.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ResumeForge · Professional Resume Tools</title>
+    <title> Professional Resume Tools</title>
     <meta name="description" content="Complete resume toolkit - create, edit, analyze, optimize, and download professional resumes">
     <!-- Bootstrap + icons + font -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -580,7 +580,7 @@
                 <i class="bi bi-file-person"></i>
             </div>
             <div class="logo-text">
-                <h1>ResumeForge</h1>
+                <h1></h1>
                 <p>Professional Resume Tools</p>
             </div>
         </div>
