--- a/tools/image-tools.html
+++ b/tools/image-tools.html
@@ -673,7 +673,7 @@
 
     <!-- Footer -->
     <footer class="text-center small text-muted mt-4">
-        PixelForge v1.0 · Complete image editing suite
+         Complete image editing suite
     </footer>
 </div>
 
